2003-06-30  Mohammad DAMT  <mdamt@bisnisweb.com>

	* po/id.po: Added Indonesian translation
	* configure.in: Added "id" to ALL_LINGUAS

2003-06-28  Dafydd Harries  <daf@parnassus.ath.cx>

	* configure.in: Added cy (Welsh) to ALL_LINGUAS.

Thu Jun 26 12:01:55 2003  George Lebl <jirka@5z.com>

	* configure.in, docs/Makefile.am, Makefile.am: actually include the
	  docs dir in the tarball and redo the .96 release (doh!)

Thu Jun 26 11:43:26 2003  George Lebl <jirka@5z.com>

	* Release 2.4.2.96

Thu Jun 26 08:48:35 2003  George Lebl <jirka@5z.com>

	* gui/gdmlogin.c: after setting the label on select, resize login box

Wed Jun 25 18:18:46 2003  George Lebl <jirka@5z.com>

	* NEWS, configure.in: prepare for .96

	* daemon/verify-crypt.c: remove unused var

Wed Jun 25 15:38:29 2003  George Lebl <jirka@5z.com>

	* configure.in, config/gdm.conf.in: Fix some typos pointed out by Ali
	  Akcaagac <aliakc@web.de>

	* daemon/errorgui.[ch]: fix a bug with yes/no dialog return and add
	  several button dialog type.  run the dialogs with gdm privilages
	  and not root.  All except the full error with details file.

	* daemon/display.c: turn some info's back into debugs 

	* daemon/getvt.[ch], daemon/gdm.c: push the vt changing stuff into
	  getvt, though it's still a hack

	* daemon/slave.c, daemon/gdm.[ch], config/gdm.conf.in,
	  daemon/verify-*.c: add a double login warning question.  This asks
	  if the user still wants to log in.  If on console and there is
	  another login on a console the user can return to a previous login.
	  Can be turned off by daemon/DoubleLoginWarning=false.  For this
	  we needed notify ack response and a QUERYLOGIN SOP protocol entry.

	* daemon/slave.c: set DESKTOP_SESSION as well as GDMSESSION

	* daemon/verify-pam.c: don't refer to the /etc/pam.d/ dir since
	  that's linux-pam specific

	* daemon/gdm.[ch]: add ALL_SERVERS command which returns all the
	  displays on the system similarly to CONSOLE_SERVERS except it