@@ -8,7 +8,7 @@ _Comment=Log in as another user inside a nested window
 TryExec=Xnest
 Exec=gdmflexiserver --xnest
 Icon=gdm.png
-Terminal=0
+Terminal=false
 Type=Application
 Categories=Application;System;
 X-GNOME-Bugzilla-Bugzilla=GNOME
