@@ -5,7 +5,7 @@ _GenericName=New Login
 _Comment=Log in as another user without logging out
 Exec=gdmflexiserver
 Icon=gdm.png
-Terminal=0
+Terminal=false
 Type=Application
 Categories=Application;System;
 X-GNOME-Bugzilla-Bugzilla=GNOME
