@@ -5,8 +5,9 @@ _GenericName=Login Photo
 _Comment=Change the picture that will show in the GDM (login manager) face browser
 TryExec=gdmphotosetup
 Exec=gdmphotosetup
-Icon=login-photo.png
-Terminal=0
+Icon=login-photo.pn
+StartupNotify=true
+Terminal=false
 Type=Application
 Categories=Application;Settings;AdvancedSettings;
 X-GNOME-Bugzilla-Bugzilla=GNOME
