@@ -6,7 +6,8 @@ _Comment=A graphical application for configuring the GNOME Display Manager (GDM)
 TryExec=gdmsetup
 Exec=gdmsetup
 Icon=gdm.png
-Terminal=0
+StartupNotify=true
+Terminal=false
 Type=Application
 Categories=Application;System;
 X-GNOME-Bugzilla-Bugzilla=GNOME
