@@ -1,3 +1,8 @@
+2003-07-02  Jordi Mallach  <jordi@sindominio.net>
+
+	* gui/*.desktop.in: Fix Terminal entries and add StartupNotify
+	support where appropriate.
+
 2003-06-30  Mohammad DAMT  <mdamt@bisnisweb.com>
 
 	* po/id.po: Added Indonesian translation
